--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 # ==================== API CONFIGURATION ====================
-VITE_API_BASE_URL=http://127.0.0.1:8000/api
+VITE_API_BASE_URL=http://127.0.0.1:8000/api/auth
 VITE_BACKEND_URL=http://127.0.0.1:8000
 
 # ==================== GOOGLE OAUTH CONFIGURATION ====================
